--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
 </head>
 <body>
   <h1 class="heading">Real-Time Group Discussion</h1>
+  <br>
+  <h5>i disconnected database</h5>
   <div id="nameContainer">
     <label for="nameInput">Your Name:</label>
     <input type="text" id="nameInput" placeholder="Enter your name...">
